Fixed image clipping

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -23,7 +23,8 @@ body {
     background-color: @color-swatch1;
     background-image: image("/images/wine-img.jpg");
     background-attachment: fixed;
-    background-repeat: none;
+    background-repeat: no-repeat;
+    background-position: top right;
     @media @tablet {
         background-size: cover;
     }
@@ -602,9 +603,6 @@ div[role="main"] {
                                 height: 180px;
                                 margin: 0.25em 0 0.75em;
                                 background-position: center;
-                                -webkit-border-radius: 5px;
-                                -moz-border-radius: 5px;
-                                border-radius: 5px;
                                 img {
                                     display: none;
                                 }
